see source code and the LICENSE file


2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
Joomla! 1.6, 1.7 and 2.5, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

12-Apr-2013 Jean-Marie Simonet
 # [#30538] Joomla Update Options button displays even if you don't have permission. Thanks Mark Dexter
 # [#30537] Menus with default view in URL and sub-tasks are missing in other defined attributes and do not display correctly in menu type input in backend. Thanks Beat
 #+ [#30139] Memcache handler Issue (Not working at all). Thanks Ofer Cohen and sajal suni
 # [#29250] *Com_content caches article view no matter of Itemid. Thanks Dennis Hermatski
 # [#30206] findmanifest should prioritize main folder manifests. Thanks Roberto Segura
 # [#30154] Allow ability to upload file (eg: profile picture) through com_users registration view. Thanks Cy Lee

11-Apr-2013 Jean-Marie Simonet
 #$ [#30534] Missing Help Button in Joomla! Update component. Thanks Mark Dexter

08-Apr-2013 Michael Babker
 # [#29916] MySQL connections are not closed.  Thanks Ian Goldstein
 # [#30505] Weblink module ignores end publishing date.  Thanks Thomas Hunziker

07-Apr-2013 Michael Babker
 # [#30091] Help Screens, key wrong, missing or not created correctly.  Thanks Mark Dexter
 # [#30428] nofollw not set correctly in mod_weblinks.  Thanks Ingo Wetsches
 # [#30209] Undefined index errors by using the style 'beezTabs' at an beez template.  Thanks Constantin Romankiewicz
 # [#30041] Use of '/' not being handled well on Windows Servers.  Thanks Parth Lawate
 # [#30054] Catchable fatal error: Object of class stdClass could not be converted to string in /plugins/system/debug/debug.php on line 303.  Thanks Ryan K.